Capitalised 'Back' and fixed misaligned icon on mobile

--- a/src/components/back-to-top/_back-to-top.scss
+++ b/src/components/back-to-top/_back-to-top.scss
@@ -29,7 +29,10 @@
 
     .nsw-material-icons:last-child {
       margin-left: 0;
-      letter-spacing: -0.25rem;
+
+      @include breakpoint('md') {
+        letter-spacing: -0.25rem;
+      }
     }
   }
 }
